# lamdu-calculus

./: .ghci  .gitignore  ExceptionMonad.md  README.md  hie.yaml  lamdu-calculus.cabal  package.yaml  stack.yaml
doc/: ExceptionMonad.md  Optimization.md
src/Data/ByteString/: Hex.hs
src/Data/Map/: Utils.hs
src/Data/Tree/: Diverse.hs
src/Data/Tree/Diverse/: Arbitrary.hs
src/Lamdu/Calc/: Constraints.hs  Definition.hs  FlatComposite.hs  Identifier.hs  Infer.hs  Lens.hs  Pure.hs  Scheme.hs  Suggest.hs  Term.hs  Type.hs  TypeVars.hs  Val.hs
src/Lamdu/Calc/Infer/: Refragment.hs
src/Lamdu/Calc/Internal/: Prelude.hs
src/Lamdu/Calc/Term/: Arbitrary.hs  Eq.hs
src/Lamdu/Calc/Type/: Constraints.hs  FlatComposite.hs  Match.hs  Nominal.hs  Scheme.hs  Vars.hs
src/Lamdu/Calc/Val/: Annotated.hs
src/Lamdu/Calc/Val/Annotated/: Arbitrary.hs
test/: TestVals.hs  benchmark.hs  test.hs
tools/: core-type-apps.py
