name:                lamdu-calculus
version:             0.1.0.0
synopsis:            The Lamdu Calculus programming language
description:         Please see README.md
homepage:            https://github.com/lamdu/lamdu-calculus.git#readme
license:             BSD3
license-file:        LICENSE
author:              Yair Chuchem, Eyal Lotem
maintainer:          yairchu@gmail.com
copyright:           2016 Eyal Lotem, Yair Chuchem
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  ghc-options:         -O2 -Wall -Wnoncanonical-monad-instances -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  hs-source-dirs:      src
  exposed-modules:     Data.Tree.Diverse
                     , Data.Tree.Diverse.Arbitrary
                     , Lamdu.Calc.Identifier
                     , Lamdu.Calc.Lens
                     , Lamdu.Calc.Pure
                     , Lamdu.Calc.Term
                     , Lamdu.Calc.Term.Arbitrary
                     , Lamdu.Calc.Term.Eq
                     , Lamdu.Calc.Type
                     , Lamdu.Calc.Type.Constraints
                     , Lamdu.Calc.Type.FlatComposite
                     , Lamdu.Calc.Type.Match
                     , Lamdu.Calc.Type.Nominal
                     , Lamdu.Calc.Type.Scheme
                     , Lamdu.Calc.Type.Vars
  build-depends:       base >= 4.7
                     , base-compat >= 0.8.2
                     , base16-bytestring
                     , transformers
                     , QuickCheck
                     , binary
                     , bytestring
                     , containers
                     , deepseq
                     , hashable
                     , lens >= 4.1
                     , pretty >=1.1.2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lamdu/lamdu-calculus.git
