name:                lamdu-calculus
version:             0.1.0.0
synopsis:            The Lamdu Calculus programming language
description:         Please see README.md
homepage:            https://github.com/lamdu/lamdu-calculus.git#readme
license:             BSD3
license-file:        LICENSE
author:              Yair Chuchem, Eyal Lotem
maintainer:          yairchu@gmail.com
copyright:           2016 Eyal Lotem, Yair Chuchem
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  ghc-options:         -O2 -Wall -Wnoncanonical-monad-instances -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  ghc-prof-options: -O2
  hs-source-dirs:      src
  exposed-modules:     Lamdu.Calc.Definition
                     , Lamdu.Calc.Identifier
                     , Lamdu.Calc.Infer
                     , Lamdu.Calc.Lens
                     , Lamdu.Calc.Pure
                     , Lamdu.Calc.Term
                     , Lamdu.Calc.Term.Arbitrary
                     , Lamdu.Calc.Term.Eq
                     , Lamdu.Calc.Type
  build-depends:       base >= 4.7
                     , base-compat >= 0.8.2
                     , base16-bytestring
                     , binary
                     , bytestring
                     , constraints
                     , containers
                     , deepseq
                     , hashable
                     , lattices
                     , lens >= 4.1
                     , monad-st
                     , mtl
                     , pretty >=1.1.2
                     , syntax-tree
                     , transformers
                     , QuickCheck
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lamdu/lamdu-calculus.git

benchmark bench-builder-all
  ghc-options: -O2
  ghc-prof-options: -O2
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          benchmark.hs
  other-modules:    TestVals
  build-depends: base
               , base-compat
               , bytestring
               , containers
               , criterion
               , deepseq
               , lamdu-calculus
               , lens
               , lattices
               , monad-st
               , mtl
               , pretty
               , syntax-tree
               , transformers
